feat: added create products with spreadsheet use case